fixed schedule alignment

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -773,7 +773,8 @@ pre {
 
 .row-header {
      background-color: #f0ba33;
-    color: black;
+     color: black;
+     margin-top: -20px;
 }
 
 .schedule-row {
